fix(Table): improve header visibility and transition styling

--- a/packages/react-components/src/components/Table/Table.module.scss
+++ b/packages/react-components/src/components/Table/Table.module.scss
@@ -61,8 +61,10 @@ $base-class: 'table';
       transform 0.2s ease-in-out,
       opacity 0.2s ease-in-out,
       height 0.2s ease-in-out,
+      visibility 0.2s ease-in-out,
       margin 0.2s ease-in-out,
       padding 0.2s ease-in-out;
+    visibility: hidden;
     opacity: 0;
     z-index: 5;
     margin: 0;
@@ -70,18 +72,17 @@ $base-class: 'table';
     border-top-right-radius: var(--radius-3);
     background-color: var(--surface-invert-primary);
     padding: 0;
-    width: 0;
     height: 0;
     overflow: hidden;
     font-weight: 500;
 
     &--visible {
       transform: translateY(0);
+      visibility: visible;
       opacity: 1;
       margin: 0;
       padding: var(--spacing-2) var(--spacing-2) var(--spacing-2)
         var(--spacing-4);
-      width: 100%;
       height: 48px;
       overflow: visible;
     }
